syntax = "proto3";

package gprc;

option go_package = "../grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service UserHandler {
    rpc List(ListReq) returns (ListTask) {
        option (google.api.http) = {
            get: "/tasks"
        };
    };

    rpc Get(GetReq) returns (Task) {
        option (google.api.http) = {
            get: "/tasks/{id}"
        };
    };

    rpc Create(CreateReq) returns (Task) {
        option (google.api.http) = {
            post: "/tasks/"
            body: "*"
        };
    };

    rpc Update(UpdateReq) returns (Task) {
        option (google.api.http) = {
            put: "/tasks/{id}"
            body: "*"
        };
    };

    rpc Delete(DeleteReq) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/tasks/{id}"
        };
    }

    rpc DeleteAll(google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/tasks"
        };
    }
}

message ListReq {
    int32 page_size  = 1;
    int32 page_token = 2;
}

message GetReq {
    int32 id = 1;
}

message CreateReq {
    string name         = 2;
    string description  = 3;
    bool is_done        = 4;
    repeated int32 tags = 6;
}

message UpdateReq {
    int32 id  = 1 [(validate.rules).message.required = true];
    Task task = 2;
}

message DeleteReq {
    int32 id = 1;
}

message ListTask {
    repeated Task tasks = 1;
}

message Task {
    int32 id                               = 1;
    string name                            = 2;
    string description                     = 3;
    bool is_done                           = 4;
    string creator_id                      = 5;
    repeated int32 tags                    = 6;
    google.protobuf.Timestamp created_time = 7;
    google.protobuf.Timestamp updated_time = 8;
    google.protobuf.Timestamp doned_time   = 9;
}